Top seller tag issue fixed

--- a/springbirds-core/product_items.html
+++ b/springbirds-core/product_items.html
@@ -1,4 +1,9 @@
 <div class="product-item" data-catalogid="[catalogid]" data-ajaxcart="1" data-addcart-callback="addcart_callback" data-categoryid="[cat_id]">
+    <!--START: toSellerTag-->
+        <span id="topSellerDiv1_[topSellerSufix]" class="top-seller-badge top-seller-badge2" style="background-color: [topSellerBackGround]; color: [topSellerFontGround];">
+            Top Seller
+        </span> 
+    <!--END: toSellerTag-->
     <div class="img">
         <a href="product.asp?itemid=[catalogid]">
             <img src="[THUMBNAIL]" alt="[imagecaption1]" class="img-responsive" />
